@@ -24,7 +24,7 @@
     mod_auth_anon.c<br />
      <a href="module-dict.html#ModuleIdentifier"
     rel="Help"><strong>Module Identifier:</strong></a>
-    anon_auth_module</p>
+    auth_anon_module</p>
 
     <h2>Summary</h2>
 
