@@ -24,7 +24,7 @@
     mod_include.c<br />
      <a href="module-dict.html#ModuleIdentifier"
     rel="Help"><strong>Module Identifier:</strong></a>
-    includes_module</p>
+    include_module</p>
 
     <h2>Summary</h2>
 
