@@ -26,7 +26,7 @@
     mod_log_config.c<br />
      <a href="module-dict.html#ModuleIdentifier"
     rel="Help"><strong>Module Identifier:</strong></a>
-    config_log_module</p>
+    log_config_module</p>
 
     <h2>Summary</h2>
 
